PRETTY MUCH EVERYTHING

--- a/conclusion/index.html
+++ b/conclusion/index.html
@@ -15,6 +15,19 @@
 	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
     <link rel="stylesheet" href="conclusion.css">
 
+    <!-- Social Share Nonsense -->
+	<meta itemprop="name" content="AI Safety for Fleshy Humans: THE GRAND CINEMATIC CONCLUSION">
+	<meta itemprop="description" content="THE END”">
+	<meta itemprop="image" content="https://aisafety.dance/thumbs/thumb-p3.png">
+	<meta property="og:title" content="AI Safety for Fleshy Humans: THE GRAND CINEMATIC CONCLUSION">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://aisafety.dance/thumbs/thumb-p3.png">
+	<meta property="og:description" content="THE END">
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="AI Safety for Fleshy Humans: THE GRAND CINEMATIC CONCLUSION">
+	<meta name="twitter:description" content="THE END">
+	<meta name="twitter:image" content="https://aisafety.dance/thumbs/thumb-p3.png">
+
     <!-- Hack Club's no-cookies, GDPR-compliant analytics -->
     <script defer data-domain="aisafety.dance" src="https://plausible.io/js/script.js"></script>
 
@@ -170,13 +183,13 @@
 
         <!-- Sunset: Credits -->
         <div style="z-index:-1; position:absolute; width:100%; height:4950px;">
-            <div id="sunset_bg" style="position:sticky; top:-135px;/*programmatic TODO*/ width:100%; height:850px;"></div>
+            <div class="programmatic_hack" id="sunset_bg" style="position:sticky; top:-135px;/*programmatic TODO*/ width:100%; height:850px;"></div>
         </div>
         <div style="z-index:99; position:absolute; width:100%; height:4950px;">
-            <div id="sunset_railing" style="position:sticky; top:-135px; width:100%; height:850px; /*change programmatically TODO*/"></div>
+            <div class="programmatic_hack" id="sunset_railing" style="position:sticky; top:-135px; width:100%; height:850px; /*change programmatically TODO*/"></div>
         </div>
         <div style="z-index:99; position:absolute; width:100%; height:4950px;">
-            <div id="sunset_chars" style="position:sticky; top:-135px; width:100%; height:850px; /*change programmatically TODO*/"></div>
+            <div class="programmatic_hack" id="sunset_chars" style="position:sticky; top:-135px; width:100%; height:850px; /*change programmatically TODO*/"></div>
         </div>
         <img class="load_me" width="1000" height="1000" src="pics/sunset_bg.png"/>
         <img class="load_me" width="1000" height="1000" src="pics/sunset_chars1.png"/>
@@ -247,7 +260,7 @@
                 <br><br>
                 You could also help me pay food & rent in this economy, no pressure:
                 <br><br>
-                <iframe src="https://ncase.me/ncase-credits/supporters/oct-2025.html" frameborder="no" width="640" height="640"></iframe>
+                <iframe src="https://ncase.me/ncase-credits/supporters/dec-2025.html" frameborder="no" width="640" height="640"></iframe>
                 <br><br>
                 If you'd like to learn more about AI Safety & Governance,
                 I recommend checking out the YouTube channels
@@ -270,9 +283,11 @@
                 in Vienna in Jan 2026, and an
                 <a href="https://campfire.hackclub.com/">🔥 international game jam</a>
                 in Feb 2026.
+                <!--
                 And if you sign up for their newsletter below, you can get free AI Safety for Fleshy Humans stickers: ⤵
                 <br><br>
                 (TODO)
+            -->
                 <br><br>
                 To learn more about / get funding for / donate to "stuff that reduces the chance
                 some horrible civilization-level catastrophe happens this century",
@@ -281,6 +296,22 @@
                 <br><br>
                 Stay humane, cats & kittens!<br>
                 ~ Nicky Case
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                p.s: you stuck <i>all</i> the way to the end? wow!
+                thank you &lt;3
+                <br>
+                here, have
+                <a href="../thumbs/wallpaper-1.png" download>a wallpaper</a>, and
+                <a href="../thumbs/wallpaper-2.png" download>another wallpaper</a> 💖
             </div>
         </div>
 
