--- a/conclusion/index.html
+++ b/conclusion/index.html
@@ -105,7 +105,7 @@
             <br>
             reading this series!
             <br>
-            <span style="font-size: 20px;">(<i>four hours worth</i> of text!!!)</span>
+            <span style="font-size: 20px;">( <i>four hours worth</i> of text!!! )</span>
         </div>
         <div style="height:600px; position:relative; line-height:1.5em;">
             <div style="width:350px; float:left; text-align:right;">
@@ -226,6 +226,7 @@
                 Alex Kreitzberg &middot;
                 Audrey Tang &middot;
                 B Cavello &middot;
+                Dewi Erwan &middot;
                 Egg Syntax &middot;
                 Gisele Chou &middot;
                 Lexi Mattick &middot;
@@ -260,7 +261,7 @@
                 <br><br>
                 You could also help me pay food & rent in this economy, no pressure:
                 <br><br>
-                <iframe src="https://ncase.me/ncase-credits/supporters/dec-2025.html" frameborder="no" width="640" height="640"></iframe>
+                <iframe src="https://ncase.me/ncase-credits/supporters/dec-2025.html?v=2" frameborder="no" width="640" height="640"></iframe>
                 <br><br>
                 If you'd like to learn more about AI Safety & Governance,
                 I recommend checking out the YouTube channels
