--- a/p1/index.html
+++ b/p1/index.html
@@ -182,10 +182,9 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
-                <div>
+            <a target="_self" href="../p3"
+                class="live">
+                <div  >
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
                     </span>
@@ -194,9 +193,8 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
+            <a target="_self" href="../conclusion"
+                class="live">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
