--- a/p3/index.html
+++ b/p3/index.html
@@ -192,10 +192,9 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
-                <div>
+            <a target="_self" href="../p3"
+                class="live">
+                <div  >
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
                     </span>
@@ -204,9 +203,8 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
+            <a target="_self" href="../conclusion"
+                class="live">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
@@ -240,7 +238,6 @@
 
     <!-- BEHOLD! CONTENT!!!!! -->
 	<article id="content">
-<h3>This is a secret unlisted page! It'll go live on the first week of Dec 2025, finally!</h3>
 <div style="text-align:center"><i>(This is Part 3 of a series on AI Safety! You don't</i> have <i>to read the previous parts — <a href="https://aisafety.dance/">Intro</a>, <a href="https://aisafety.dance/p1">Part 1</a>, <a href="https://aisafety.dance/p2">Part 2</a> — but they'll help!)</i></div>
 <p>So, after writing 40,000+ words on how weird &amp; difficult AI Safety is... how am I feeling about the chances of humanity solving this problem?</p>
 <p>...pretty optimistic, actually!</p>
@@ -1141,7 +1138,7 @@
 </li>
 <li>💖 <u>Learning our Values:</u> Understanding causality lets AI distinguish between things we want <em>for its own sake</em>, vs things we want <em>for something else</em>. (&quot;intrinsic&quot; vs &quot;instrumental&quot; goals) For example, an AI should understand we want money, but to buy helpful things, <em>not</em> for its own sake.
 <ul>
-<li><a href="https://aisafety.dance/p2/#problem6">The &quot;inner misalignment&quot; problem</a> — the problem of AIs learning the wrong values <em>even with perfectly-specified rewards</em> — can be reframed as a problem of <em>goal</em> robustness, or correlation-causation mixups. For example, a videogame AI that's rewarded for getting the coin at the end of a level learns to <em>love going to the right for its own sake</em>, and ignore the coin. <a href="https://arxiv.org/pdf/2309.16166">A 2023 study</a> finds that making the AI &quot;think like a scientist&quot; — generate &amp; test multiple hypotheses for what <em>causes</em> reward, not just correlates with it — helps that AI solve goal robustness.</li>
+<li><a href="https://aisafety.dance/p2/#problem6">The &quot;inner misalignment&quot; problem</a> — the problem of AIs learning the wrong values <em>even with perfectly-specified rewards</em> — can be reframed as a problem of <em>goal</em> robustness, or correlation-causation mixups. For example, a videogame AI that's rewarded for getting the coin at the end of a level learns to <em>love going to the right for its own sake</em>, and ignore the coin. <a href="https://arxiv.org/pdf/2309.16166">A 2023 paper</a> finds that making the AI &quot;think like a scientist&quot; — generate &amp; test multiple hypotheses for what <em>causes</em> reward, not just correlates with it — helps that AI solve goal robustness.</li>
 </ul>
 </li>
 <li>🔮 <u>The &quot;Future Lives&quot; Algorithm:</u> Causal models would help an AI get better at predicting the world in different what-if (&quot;counterfactual&quot;) scenarios, <em>and</em> predicting what we'd approve of.</li>
