--- a/index.html
+++ b/index.html
@@ -243,13 +243,10 @@
 <p><code>[tour guide voice]</code> And to your right 👉, you'll see buttons for <img src="media/intro/icon1.png" class="inline-icon"/> the Table of Contents, <img src="media/intro/icon2.png" class="inline-icon"/> changing this webpage's style, and <img src="media/intro/icon3.png" class="inline-icon"/> a reading-time-remaining clock.</p>
 <p>This series was/will be published in three parts:</p>
 <ul>
-<li>This Intro &amp; Part 1 were out on <strong>May 2024</strong></li>
-<li>Part 2 was out on <strong>Aug 2024</strong></li>
-<li>Part 3 &amp; The Grand Cinematic Conclusion will be out by <strong>start of Dec 2025</strong></li>
+<li>This Intro &amp; <a href="/p1">Part 1: Past, Present &amp; Future</a> were out on <strong>May 2024</strong></li>
+<li><a href="/p2">Part 2: Problems</a> was out on <strong>Aug 2024</strong></li>
+<li><a href="/p3">Part 3: Solutions</a> &amp; <a href="/conclusion">The Grand Cinematic Conclusion</a> were out on <strong>Dec 2025</strong></li>
 </ul>
-<p>OPTIONAL: If you'd like to be notified on their release, signup below!👇 You <em>will not</em> be spammed with other stuff, just the two notification emails. (Buuuuut, <code>[podcast sponsor voice]</code> if you're in high school or earlier, and interested in AI/code/engineering, consider checking the box to learn more about <a href="https://hackclub.com/">Hack Club!</a> P.S: There's free <em>stickers~~~</em> ✨)</p>
-<p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
-<script defer src="https://server.fillout.com/embed/v1/"></script></p>
 <p>Anyway, <code>[tour guide voice again]</code> before we hike through the rocky terrain of AI &amp; AI Safety, let's take a 10,000-foot look of the land:</p>
 <hr>
 <h2>💡 The Core Ideas of AI &amp; AI Safety</h2>
