--- a/conclusion/index.html
+++ b/conclusion/index.html
@@ -208,8 +208,11 @@
         </div>
         <div class="glitchy" style="height:700px">
             IN COLLABORATION<br>
-            WITH <b>HACK CLUB</b> &<br>
-            THE <b>LONG TERM<br>FUTURE FOUNDATION</b>
+            <span style="font-size: 55px;">WITH <b>HACK CLUB</b></span>
+            <br>
+            <span style="font-size: 21px;">
+                &amp; extra funding from the long term future foundation
+            </span>
         </div>
         <div style="height:800px; font-size: 40px;">
             <span class="glitchy" style="line-height: 1.2em;display: block;">
@@ -284,11 +287,10 @@
                 in Vienna in Jan 2026, and an
                 <a href="https://campfire.hackclub.com/">🔥 international game jam</a>
                 in Feb 2026.
-                <!--
-                And if you sign up for their newsletter below, you can get free AI Safety for Fleshy Humans stickers: ⤵
+                If you'd like to sign up for their newsletter, you can get free AI Safety for Fleshy Humans stickers: ⤵
                 <br><br>
-                (TODO)
-            -->
+                <div style="width:100%;height:500px;" data-fillout-id="cRCnJk2JsJus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
+                <script defer src="https://server.fillout.com/embed/v1/"></script>
                 <br><br>
                 To learn more about / get funding for / donate to "stuff that reduces the chance
                 some horrible civilization-level catastrophe happens this century",
@@ -313,6 +315,11 @@
                 here, have
                 <a href="../thumbs/wallpaper-1.png" download>a wallpaper</a>, and
                 <a href="../thumbs/wallpaper-2.png" download>another wallpaper</a> 💖
+                <br><br>
+                p.p.s: it took me 6 hours to draw that "crossroads" image, in Procreate.
+                <a href="../media/crossroads_proof.mp4">here's proof</a> it was fully human-drawn, no generative AI used.
+                not gonna lie, about 3 hours in, i was <i>reaaaaally</i> tempted
+                to let an AI autocomplete it for me...
             </div>
         </div>
 
