--- a/p2/index.html
+++ b/p2/index.html
@@ -265,9 +265,10 @@
 <p><em>&quot;Be careful what you wish for, you just may get it.&quot;</em> It's a problem so old, it's enshrined in myth: King Midas, ironic genies, the Monkey's Paw.</p>
 <p>This is called <strong>Goal Mis-specification</strong> (also called Reward Mis-specification): When an AI does <em>exactly what you asked for</em>, not necessarily <em>what you actually wanted.</em></p>
 <p>(If you forgot from Part One, here's how <a href="#WaysToMakeHumaneAIGoingWrong">:seemingly-obvious ways to make &quot;humane AI&quot; can go wrong</a>. Bonus: <a href="#StoryOfPassivePredictionLeadingToHarm">:even <em>passive</em> goals like &quot;predict something&quot; can lead to harmful results!</a> 👈 <em>OPTIONAL: Click to expand these texts!</em>)</p>
-<p><em>(Also — if you'd like to be notified when Part 3: The Proposed Solutions is out, in mid-December, sign up below! If you're a high-schooler you can also get free stickers 👇)</em></p>
-<p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
-<script defer src="https://server.fillout.com/embed/v1/"></script></p>
+<p><em>(By the way, this series was made in collaboration with Hack Club, a worldwide community for &amp; by teen hackers! If you'd like to learn more, and get free stickers, sign up below👇)</em></p>
+<p><div style="width:100%;height:500px;" data-fillout-id="cRCnJk2JsJus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
+<script defer src="https://server.fillout.com/embed/v1/"></script>
+</p>
 <p>. . .</p>
 <p>Anyway, enough recapping the basics. Let's introduce you to:</p>
 <p><strong>How this relates to core ideas from other fields:</strong></p>
@@ -1062,8 +1063,9 @@ b) Selects future outcomes based on <em>CURRENT</em> goals,</p>
 <p>The other half is, well, solving it.</p>
 <p>After two long chapters, finally, we can understand the top proposed solutions to <em>every</em> sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming <strong>end of November 2025!</strong></p>
 <p>Sign up to be notified when the final part is out: 👇</p>
-<p><div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
-<script defer src="https://server.fillout.com/embed/v1/"></script></p>
+<p><div style="width:100%;height:500px;" data-fillout-id="cRCnJk2JsJus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
+<script defer src="https://server.fillout.com/embed/v1/"></script>
+</p>
 <p>In the meantime, check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span class='NEXT_ARROW'><img src="../media/misc/NEXT_ARROW.png"></span></p>
 <h4>:x Ways to make &quot;Humane AI&quot; going wrong</h4>
 <p>(copy-pasted from <a href="https://aisafety.dance/p1/">Part One</a>)</p>
