--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@
 <li><a href="/p2">Part 2: Problems</a> was out on <strong>Aug 2024</strong></li>
 <li><a href="/p3">Part 3: Solutions</a> &amp; <a href="/conclusion">The Grand Cinematic Conclusion</a> were out on <strong>Dec 2025</strong></li>
 </ul>
+<p><em>(By the way, this series was made in collaboration with Hack Club, a worldwide community for &amp; by teen hackers! If you'd like to learn more, and get free stickers, sign up below👇)</em></p>
+<p><div style="width:100%;height:500px;" data-fillout-id="cRCnJk2JsJus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
+<script defer src="https://server.fillout.com/embed/v1/"></script>
+</p>
 <p>Anyway, <code>[tour guide voice again]</code> before we hike through the rocky terrain of AI &amp; AI Safety, let's take a 10,000-foot look of the land:</p>
 <hr>
 <h2>💡 The Core Ideas of AI &amp; AI Safety</h2>
