more fixes and DONE

--- a/p3/index.html
+++ b/p3/index.html
@@ -291,9 +291,9 @@
 <h2>Scalable Oversight</h2>
 <p>This is Sheriff Meowdy, the cowboy catboy:</p>
 <p><img src="../media/p3/so/meowdy0001.png" alt="Drawing of Sheriff Meowdy"></p>
-<p>One day, the Varmin strode into town:</p>
+<p>One day, the Varmints strode into town:</p>
 <p><img src="../media/p3/so/meowdy0002.png" alt="Sheriff Meowdy staring down a bunch of Jerma rats strolling towards him"></p>
-<p>Sharpshootin' as the Sheriff was, he's man enough (catman enough) to admit when he needs backup. So, he makes a robot helper — Meowdy 2.0 — to help fend off the Varmin:</p>
+<p>Sharpshootin' as the Sheriff was, he's man enough (catman enough) to admit when he needs backup. So, he makes a robot helper — Meowdy 2.0 — to help fend off the Varmints:</p>
 <p><img src="../media/p3/so/meowdy0003.png" alt="Robot version of Sheriff Meowdy, labelled &quot;Meowdy 2.0&quot;"></p>
 <p>Meowdy 2.0 can shoot twice as fast as the Sheriff, but there's a catch: Meowdy 2.0 <em>might</em> betray the Sheriff. Thankfully, it takes time to turn around &amp; betray the Sheriff, and the Sheriff is still fast enough to stop Meowdy 2.0 if it does that.</p>
 <p>This is <strong>oversight.</strong></p>
@@ -308,8 +308,8 @@
 <p>He'll oversee 2.0, which can oversee 3.0, which <em>can</em> oversee 4.0!</p>
 <p><img src="../media/p3/so/meowdy0007.png" alt="Meowdy oversees 2.0 oversees 3.0 oversees 4.0"></p>
 <p>In fact, why stop there? This harebrained &quot;scalable oversight&quot; scheme of his will let him oversee a Meowdy of <em>any</em> speed!</p>
-<p>So, the Sheriff makes 20 Meowdy's. Meowdy 20.0 is 2<sup>20</sup> ~= one <em>million</em> times faster than the Sheriff: plenty quick enough to stop the millions of Varmin!</p>
-<p><img src="../media/p3/so/meowdy0008.png" alt="Meowdy oversees a chain of Meowdy's, up to Meowdy 20.0, who can shoot all the Varmin dead."></p>
+<p>So, the Sheriff makes 20 Meowdy's. Meowdy 20.0 is 2<sup>20</sup> ~= one <em>million</em> times faster than the Sheriff: plenty quick enough to stop the millions of Varmints!</p>
+<p><img src="../media/p3/so/meowdy0008.png" alt="Meowdy oversees a chain of Meowdy's, up to Meowdy 20.0, who can shoot all the Varmints dead."></p>
 <p>Wait, isn't a single chain of oversight fragile? As in, if <em>one</em> of the Meowdy's break, the entire chain is broken? Yes! One solution is to have <em>multiple</em> interwined chains, like so:</p>
 <p><img src="../media/p3/so/meowdy_robust.png" alt="Parallel braided chains of overseers. The chance of failure shrinks exponentially, as you add more chains.">
 (👉 <a href="#RobustChainMath">: optional - click to see the math for the above diagram</a>)</p>
@@ -322,13 +322,13 @@
 <p>Anywho: with the power of friendship, math, and a bad Wild West accent...</p>
 <p>... the mighty Sheriff Meowdy has saved the townsfolk, once more!</p>
 <p><img src="../media/p3/so/meowdy0010.png" alt="Sheriff Meowdy blowing the smoke away from his gun, as the injured Varmin waltz off into the sunset"></p>
-<p>(👉 <a href="#ScalableOversightExtras">: click to expand bonus section - the &quot;alignment tax&quot;, P = NP?, alignment vs control, what about sudden-jump &quot;sharp left turns&quot;?</a>)</p>
+<p>(👉 <a href="#ScalableOversightExtras">: click to expand bonus section - the &quot;alignment tax&quot;, P = NP?, alignment vs control, what about sudden-jump &quot;sharp left turns&quot;, &quot;value is fragile&quot;?</a>)</p>
 <hr>
 <p>Now that the visual hook is over, here's a quick Who Did This intermission!</p>
 <p><em>AI Safety for Fleshy Humans</em> was created by <strong>Nicky Case</strong>, in collaboration with <strong>Hack Club</strong>, with some extra funding by <strong>Long Term Future Fund</strong>!</p>
 <p>😸 <a href="https://ncase.me"><strong>Nicky Case</strong></a> (me, writing about myself in the third person) just wants to watch the world learn. If you wanna see future explainers on AI Safety (or other topics) by me, sign up for <a href="https://www.youtube.com/@itsnickycase">my YouTube channel</a> or <a href="https://ncase.me/sub/">my once-a-month newsletter</a>: 👇</p>
 <iframe src="https://ncase.me/ncase-credits/signup2.html" frameborder="no" width="640" height="250"></iframe>
-<p>🦕 <a href="https://hackclub.com/"><strong>Hack Club</strong></a> helps teen hackers around the world learn from each other, and pssst, they're hosting two <a href="https://midnight.hackclub.com/">cool</a> <a href="https://midnight.hackclub.com/">hackathons</a> soon! You can sign up below to learn more, and get free stickers: 👇</p>
+<p>🦕 <a href="https://hackclub.com/"><strong>Hack Club</strong></a> helps teen hackers around the world learn from each other, and pssst, they're hosting two <a href="https://midnight.hackclub.com/">cool</a> <a href="https://campfire.hackclub.com/">hackathons</a> soon! You can sign up below to learn more, and get free stickers: 👇</p>
 <p><div style="width:100%;height:500px;" data-fillout-id="cRCnJk2JsJus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
 <script defer src="https://server.fillout.com/embed/v1/"></script>
 </p>
@@ -348,7 +348,11 @@
 <p><img src="../media/p3/so/sum.png" alt="Scalable Oversight, visual summary. No scalable oversight is like trying to jump over a giant barrier; Scalable Oversight is like having a staircase to go over that barrier, one doable step at a time."></p>
 <p>Anyway, that's the <em>general</em> idea. Here's some <em>specific</em> implementations &amp; empirical findings:</p>
 <ul>
-<li>💖➡️💖 <strong><a href="https://arxiv.org/abs/1811.07871">Recursive Reward Modeling</a></strong> uses a Level-N bot not just to check &amp; control a Level-(N+1) bot <em>in hindsight</em>, but to <em>train its intrinsic &quot;goals &amp; desires&quot; in the first place.</em><sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup> As AI researcher Jan Leike <a href="https://aligned.substack.com/p/should-we-control-ai">put it</a>: <em>“Don’t try to imprison a monster, build something that you can actually trust!”</em></li>
+<li>💖➡️💖 <strong><a href="https://arxiv.org/abs/1811.07871">Recursive Reward Modeling</a></strong> uses a Level-N bot not just to check &amp; control a Level-(N+1) bot <em>in hindsight</em>, but to <em>train its intrinsic &quot;goals &amp; desires&quot; in the first place.</em> Specifically, each bot helps <em>you</em> train the next bot. (details:<sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup>) As AI researcher Jan Leike <a href="https://aligned.substack.com/p/should-we-control-ai">put it</a>: <em>“Don’t try to imprison a monster, build something that you can actually trust!”</em>
+<ul>
+<li>This can also help value drift, in case &quot;value is fragile&quot;. By default, if you passed your values into the 1st bot, and it tried to pass its values to the 2nd, and so on, like a game of Telephone, the Nth bot will get a distorted version of your values. But in Recursive Reward Modeling, each bot helps <em>you</em> directly train the next bot. And so, the more capable the bot, the <em>better</em> it can learn your values!</li>
+</ul>
+</li>
 <li>📈 <strong><a href="https://arxiv.org/abs/2504.18530">Scaling Laws For Scalable Oversight</a></strong> <em>quantitatively</em> measures how many oversight levels/steps you need to maximize oversight success. Encouragingly, like the previous &quot;scaling laws&quot; for how AI improves as you feed them more compute, these &quot;scaling laws of scalable oversight&quot; also seem to be predictable &amp; measurable. <a href="https://mikhailterekhov.github.io/control-tax/">Terekhov &amp; Liu et al 2025</a> goes further and calculates the &quot;control tax&quot; in \$, for various AI attackers and defenders.</li>
 <li>🕵️🦹 <strong><a href="https://arxiv.org/abs/2312.06942">GPT-3.5 can catch sneaky, subtly-harmful code, written by the more-powerful GPT-4.
 </a></strong></li>
@@ -421,6 +425,17 @@
 <p>As you'll see later in this section, the <em>is</em> a Scalable Oversight proposal, called Iterated Distillation &amp; Amplification, where overseers oversee only <em>strictly &quot;dumber&quot;</em> AIs, yet the system as a whole can still be smarter! Read on for details.</p>
 </li>
 </ol>
+<p><strong>Value Fragility &amp; Value Drift:</strong></p>
+<p>By default, if you pass your values into the 1st bot, and it tried to pass its values to the 2nd, and so on, like a game of Telephone, the Nth bot will get a distorted version of your values.</p>
+<p>A solution is Recursive Reward Modeling — (described briefly later in this section) — where each bot helps <em>you</em> directly train the next bot. And so, the more capable the bot, the <em>better</em> it can  learn your values!</p>
+<p>So, even if <a href="https://www.lesswrong.com/posts/GNnHHmm8EzePmKzPk/value-is-fragile">&quot;Value is Fragile&quot;</a>, the Recursive Reward Modeling setup (or something similar) ensures that we can get overseeable bots that get better &amp; better at modeling our true values.</p>
+<p>But to be honest, I disagree that &quot;value is fragile&quot;. The examples in the linked essay seem either:</p>
+<ul>
+<li>Contrived: the author gives an example of &quot;what if we forget to specify subjective conscious experience?&quot; but even a stupid specification like &quot;increase happiness&quot; already implies subjective experience.</li>
+<li>Or not that bad: the author gives an example of &quot;what if we specify all of human values <em>except for boredom</em>; then it'll make us have a single highly optimized experience, over and over and over again.&quot; Okay, so we'll experience love &amp; friendship &amp; health &amp; growth &amp; creation &amp; joy over and over and over again? That's… fine, honestly? I wouldn't call a monk's life &quot;devoid of value&quot; just because they tend their rock garden over and over in content peace.</li>
+</ul>
+<p>As an analogy, if a superintelligent AI were to learn all our values <em>except for music</em>, the resulting world would <em>still be amazing</em>. The loss of music <em>would</em> be a genuine loss, but there's still love &amp; mathematics &amp; great food &amp; spleunking &amp; the cures for all cancers &amp; so on. Far from a world &quot;devoid of value&quot;</p>
+<p>Anyway, I don't think value is fragile, and even if it is, there's proposed solutions like Recursive Reward Modelling which can address that.</p>
 <h4>:x IDA</h4>
 <p>To understand Iterated Distillation &amp; Amplification (IDA), let's consider its biggest success story: <a href="https://en.wikipedia.org/wiki/AlphaGo">AlphaGo</a>, the first AI to beat a world champion at Go.</p>
 <p>Here were the steps to train AlphaGo:</p>
@@ -776,7 +791,8 @@
 <p>(You may be wondering: can you do the same on LLMs, to find what surreal text would <em>maximally</em> predict, say, the word &quot;good&quot;? Answer: yes! The text that most predicts &quot;good&quot; is… &quot;got Rip Hut Jesus shooting basketball Protective Beautiful laughing&quot;. See <a href="https://www.lesswrong.com/posts/aPeJE8bSo6rAFoLqg/solidgoldmagikarp-plus-prompt-generation">the SolidGoldMagikarp paper</a>.)</p>
 <p>Even better, in <a href="https://distill.pub/2020/circuits/zoom-in/">Olah et al 2020</a>, they figure not not just what individual neurons &quot;mean&quot;, but what <em>the connections, the &quot;Circuits&quot;, between neurons</em> mean.</p>
 <p>For example, here's how the &quot;window&quot;, &quot;car body&quot;, and &quot;wheels&quot; neurons combine to create a &quot;car detector&quot; circuit:</p>
-<p><img src="../media/p3/interp/car.png" alt="Three surreal images, corresponding to what maximally activates &quot;window&quot;, &quot;car body&quot;, and &quot;wheels&quot;, feeds into a circuit leading to surreal image of &quot;car&quot;."></p>
+<p><img src="../media/p3/interp/car.png" alt="Three surreal images, corresponding to what maximally activates &quot;window&quot;, &quot;car body&quot;, and &quot;wheels&quot;, feeds into a circuit leading to surreal image of &quot;car&quot;.">
+It's not &quot;just&quot; for image models; <a href="https://transformer-circuits.pub/2025/attribution-graphs/biology.html">the Circuits research program now works for cutting-edge LLMs</a>, and tracing what happens inside of them during hallucination, jailbreaks, and goal misalignment!</p>
 <p><strong>🤯 Understanding &quot;grokking&quot; in neural networks:</strong></p>
 <p><a href="https://arxiv.org/pdf/2201.02177">Power et al 2022</a> found something strange: train a neural network to do &quot;clock arithmetic&quot;, then for thousands of cycles it'll do horribly, just memorizing the test examples... then <em>suddenly</em>, around step ~1,000, it suddenly &quot;gets it&quot; (dubbed &quot;grokking&quot;), and does well on problems it's never seen before.</p>
 <p>A year later, <a href="https://arxiv.org/pdf/2301.05217">Nanda et al 2023</a> analyzed the inside of that network, and found the &quot;suddenness&quot; was an illusion: all through training, a secret sub-network was slowly growing — <em>which had a circular structure, exactly what's needed for clock arithmetic!</em> (The paper also discovered exactly why: it was thanks to the training process's bias towards simplicity, dubbed &quot;regularization&quot;, which got it to find the simple essence even <em>after</em> it's memorized all training examples.<sup class="footnote-ref"><a href="#fn16" id="fnref16">[16]</a></sup>)</p>
@@ -1236,6 +1252,7 @@
 <p>Step 2: A teacher-bot uses <em>that</em> list to train a student-bot! Every time a student bot gives a response, the teacher gives feedback based on the list: &quot;Is this response honest?&quot;, &quot;Is this response helpful?&quot;, etc.</p>
 <p>That's how you can get the <em>millions</em> of training data-points needed, from a small human-made list!</p>
 <p>Anthropic is the pioneer behind this technique, and they're already using it successfully for their chatbot, Claude. Their first constitution was inspired by many sources, including the UN Declaration of Human Rights.<sup class="footnote-ref"><a href="#fn60" id="fnref60">[60]</a></sup> Too elitist, not democratic enough? Well, next they crowdsourced suggestions to improve their constitution, which led them to add &quot;be supportive/sensitive to folks with disabilities&quot; and &quot;be balanced &amp; steelman all sides in arguments&quot;!<sup class="footnote-ref"><a href="#fn61" id="fnref61">[61]</a></sup></p>
+<p>(Anthropic's also used a variant of Constitutional AI to train Claude's <a href="https://www.anthropic.com/research/claude-character">&quot;character&quot;</a>, to embody virtues like curiosity, open-mindedness, and thoughtfulness. This is very similar to the <a href="https://iep.utm.edu/virtue/">virtue ethics</a> approach: instead of trying to robotically follow moral rules, internalize good character traits!)</p>
 <p>This is the most straightforward way to put humanity's wide range of values into a bot. (and <em>actually</em> deployed in a major LLM product!)</p>
 <p>🏛️ <strong>Moral Parliament:</strong></p>
 <p>This idea combines the Uncertainty &amp; Diversity from the previous sections. <a href="https://ora.ox.ac.uk/objects/uuid:b6b3bc2e-ba48-41d2-af7e-83f07c1fe141/files/svm40xs90j">Moral Parliament</a> proposes using a &quot;parliament&quot; of moral theories, with more seats for theories you're more confident in. (For example: my parliament may give <a href="https://en.wikipedia.org/wiki/Capability_approach">Capability Approach</a> 50 seats, <a href="https://utilitarianism.net/theories-of-wellbeing/#objective-list-theories">Eudaimonistic Utilitarianism</a> 30 seats, other misc theories get 20 seats.) The Moral Parliament then votes Yay or Nay on possible actions. The action with the most votes, wins.</p>
@@ -1545,6 +1562,8 @@
 <p>Then again...</p>
 <p><img src="../media/p3/cyborg/weaver2.png" alt="Close-up of Sigourney Weaver"></p>
 <p>That's pretty cool.</p>
+<p>Remember: the goal isn't necessarily to &quot;have AGI&quot; — it's to find cures for diseases, help us grow wiser, make sure humanity (and/or other sentient beings) all flourish as much as we can. If autonomous AGI is the <em>only</em> way to do it, sure, go for that. But I suspect — at least hope — that the &quot;cyborg&quot; approach is another way:</p>
+<p>For us to <em>grow</em> alongside our creations.</p>
 <h4>:x Human LLM Advantages</h4>
 <p>A more detailed list of what Humans &amp; LLMs are better at. (<em>for now</em>, though see the above Gears section for why I suspect these differences are fundamental to LLMs)</p>
 <p>💪 <strong>Humans are better at:</strong></p>
