--- a/conclusion/index.html
+++ b/conclusion/index.html
@@ -125,7 +125,7 @@
         </div>
         <div style="height:600px; position:relative; line-height:1.5em;">
             <div style="width:350px; float:left; text-align:right;">
-                ...and put up a lot of thinly-veiled furry comics.
+                ...and put up with a lot of thinly-veiled furry comics.
             </div>
             <div class="parallax" style="width:400px; height:400px; background:#ff4040; float:right">
                 <img width="400" height="800" src="more_pics/panel_3.png"/>
