--- a/p3/index.html
+++ b/p3/index.html
@@ -248,7 +248,7 @@
 <p><img src="../media/p3/intro/solutions.png" alt="Same outline, but entirely overlapped by small colorful circles, each one representing a different solution"></p>
 <p><strong>We don't need One Perfect Solution; we can stack several imperfect solutions!</strong> This is similar to the <a href="https://en.wikipedia.org/wiki/Swiss_cheese_model">Swiss Cheese Model</a> in Risk Analysis — each layer of defense has holes, but if you have enough layers with holes in <em>different</em> places, risks can't go all the way through:</p>
 <p><img src="../media/p3/intro/cheese.png" alt="Rays going through layers of swiss cheese, which have holes in them. The rays can easily go through the holes of one layer of cheese, but not all of them."></p>
-<p>( What about <em>intelligent</em> adversaries, who can steer &amp; navigate through the holes? Look, it's a metaphor. The &quot;multiple imperfect layers of defense&quot; model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password <em>and</em> multifactor authentication code.)</p>
+<p>( What about <em>intelligent</em> adversaries, who can steer &amp; navigate through the holes? Look, it's a metaphor. The &quot;multiple imperfect layers of defense&quot; model works even against <em>much</em> more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals. )</p>
 <p>( <a href="#SwissCheese">: 🧀 Bonus section: counter-arguments &amp; counter-counter-arguments on the Swiss Cheese Model</a> ← <em>optional: whenever you see a dotted-underlined section, you can click to expand it!</em> )</p>
 <p><em>This does not mean AI Safety is 100% solved yet</em> — we still need to triple-check these proposals, and get engineers/policymakers to even <em>know</em> about these solutions, let alone implement them. But for now, I'd say: &quot;lots of work to do, but lots of promising starts&quot;!</p>
 <p>As a reminder, here's how we can break down the main problems in AI &amp; AI Safety:</p>
@@ -282,7 +282,7 @@
 <blockquote>
 <p>“If you ever make something that is trying to get to the stuff on the other side of all your Swiss cheese, it’s not that hard for it to just route through the holes.”</p>
 </blockquote>
-<p>It's important to not take the cheese metaphor too literally. The &quot;multiple imperfect layers of defense&quot; model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password <em>and</em> multifactor authentication code.</p>
+<p>It's important to not take the cheese metaphor too literally. The &quot;multiple imperfect layers of defense&quot; model works even against <em>much</em> more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals.</p>
 <p>Further, we can do better than defending against an <em>already</em>-misaligned superintelligence. If we're talking about <em>growing a trusted intelligence from scratch</em>, then the Swiss Cheese Model still makes sense at each step, <em>and</em>, you can use each iteration of a trusted AI as an extra &quot;layer of cheese&quot; for training better iterations of that AI. (See below section: Scalable Oversight)</p>
 <p>As AI researcher Jan Leike <a href="https://aligned.substack.com/p/should-we-control-ai">puts it</a>:</p>
 <blockquote>
